third_party/rust/chromium_crates_io/vendor/cxx-1.0.110/tests/ui/type_alias_rust.stderr
error: type alias in extern "Rust" block is not supported
 --> tests/ui/type_alias_rust.rs:5:9
  |
5 |         type Alias = crate::Type;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
